@@ -3301,7 +3301,10 @@ static int mkCode(int c)
     	    	    	TEXT_PUSH(c);
     	    	    	c = lookahead;
     	    	    	escaped = 1;
-    	    	    } else xxungetc(lookahead);
+    	    	    } else {
+    	    	    	xxungetc(lookahead); /* put back the 4th char */
+    	    	    	xxungetc('\\');	     /* and the 3rd */
+    	    	    }
     	    	} else if (lookahead == xxinRString) { /* There could be one or two before this */
     	    	    TEXT_PUSH(c);
     	    	    c = lookahead;
@@ -3607,11 +3610,7 @@ SEXP attribute_hidden do_deparseRd(SEXP call, SEXP op, SEXP args, SEXP env)
 	    case '\\':
 		if (xxmode == RLIKE && xxinRString) {
 		    lookahead = *(c+1);
-		    if (lookahead == '\\') {
-		        *out++ = '\\';
-			escape = TRUE;
-			escaped = TRUE;
-		    } else if (lookahead == xxinRString) 
+		    if (lookahead == '\\' || lookahead == xxinRString || lookahead == 'l') 
 		    	escape = TRUE;
 		    break;
 		}          /* fall through to % case for non-strings... */    
